{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 17,
  "lineage": "af5873f8-beb7-11c7-8c4b-f83f0c9951c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gh_actions_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-075449515af5df0d1",
            "arn": "arn:aws:ec2:eu-north-1:122610497680:instance/i-027c1c87d24e63ad6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027c1c87d24e63ad6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Rocketdex Application",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a302b5ae3e2a88c",
            "private_dns": "ip-10-0-1-128.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.128",
            "public_dns": "ec2-13-60-212-51.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.212.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04771982b41559a7b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0576323f47ae86e82",
            "tags": {
              "Name": "gh-actions-instance"
            },
            "tags_all": {
              "Name": "gh-actions-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046739fe412c5f812"
            ]
          },
          "dependencies": [
            "aws_security_group.gh_actions_sg",
            "aws_subnet.gh_actions_subnet",
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gh_actions_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:122610497680:internet-gateway/igw-06cf975ebaf5d0440",
            "id": "igw-06cf975ebaf5d0440",
            "owner_id": "122610497680",
            "tags": {
              "Name": "gh-actions-igw"
            },
            "tags_all": {
              "Name": "gh-actions-igw"
            },
            "vpc_id": "vpc-07c29c7588a5c6dfc"
          },
          "dependencies": [
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gh_actions_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:122610497680:route-table/rtb-09547f7840f3a3b19",
            "id": "rtb-09547f7840f3a3b19",
            "owner_id": "122610497680",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cf975ebaf5d0440",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gh-actions-route-table"
            },
            "tags_all": {
              "Name": "gh-actions-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c29c7588a5c6dfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gh_actions_igw",
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gh_actions_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9370c3fa61c24d7",
            "route_table_id": "rtb-09547f7840f3a3b19",
            "subnet_id": "subnet-0576323f47ae86e82"
          },
          "dependencies": [
            "aws_internet_gateway.gh_actions_igw",
            "aws_route_table.gh_actions_route_table",
            "aws_subnet.gh_actions_subnet",
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gh_actions_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:122610497680:security-group/sg-046739fe412c5f812",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046739fe412c5f812",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow NodePort traffic",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gh-actions-sg20241222160531721400000001",
            "name_prefix": "gh-actions-sg",
            "owner_id": "122610497680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gh-actions-security-group"
            },
            "tags_all": {
              "Name": "gh-actions-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c29c7588a5c6dfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gh_actions_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:122610497680:subnet/subnet-0576323f47ae86e82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0576323f47ae86e82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122610497680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gh-actions-public-subnet"
            },
            "tags_all": {
              "Name": "gh-actions-public-subnet"
            },
            "vpc_id": "vpc-07c29c7588a5c6dfc"
          },
          "dependencies": [
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gh_actions_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:122610497680:vpc/vpc-07c29c7588a5c6dfc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04802ceead0ca9175",
            "default_route_table_id": "rtb-0c899b5bbb6b4bde5",
            "default_security_group_id": "sg-02f84b2e78c342522",
            "dhcp_options_id": "dopt-08db16c0121a1b55b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c29c7588a5c6dfc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c899b5bbb6b4bde5",
            "owner_id": "122610497680",
            "tags": {
              "Name": "gh-actions-vpc"
            },
            "tags_all": {
              "Name": "gh-actions-vpc"
            }
          }
        }
      ]
    }
  ]
}